--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ header{
     padding: 20px;
     text-align: center;
 }
+nav ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
 header h1{
     color: white;
 }
