--- a/style.css
+++ b/style.css
@@ -16,8 +16,17 @@ nav ul{
     padding: 0;
     margin: 0;
 }
+nav ul li a {
+    text-decoration: none;
+    color: black;
+    padding: 15px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    font-weight: 500;
+}
+
 header h1{
-    color: white;
+    color: black;
 }
 
 
