--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ header{
     background-color: #ffcc99;
     padding: 20px;
     text-align: center;
-    border-bottom: 5px solid #ff9966;
+    border-bottom: 5px solid #ffb380;
     border-radius: 10px;
 }
 nav ul{
