--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #e0f7fa;
+    background-color: #f3e5f5;
     color: #333;
 }
 
@@ -26,6 +26,12 @@ nav ul li a {
     border-radius: 15px;
     transition: background-color 0.3s;
     font-weight: 500;
+}
+
+/* hover effect*/ 
+nav ul li a:hover {
+    background-color: #e0f7fa;
+    color: blueviolet;
 }
     
 header h1{
