--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav ul{
 nav ul li a {
     text-decoration: none;
     font-size: 20px;
-    color: black;
+    color: whitesmoke;
     padding: 12px 24px;
     border-radius: 15px;
     transition: background-color 0.3s;
@@ -35,7 +35,7 @@ nav ul li a:hover {
 }
     
 header h1{
-    color: black;
+    color: whitesmoke;
 }
 
 
