--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@ body {
 }
 
 header{
-    background-color: #720e9e;
+    background-color: #ffcc00;
     padding: 20px;
     text-align: center;
-    border-bottom: 5px solid #1d1160;
+    border-bottom: 5px solid #ff6699;
     border-radius: 10px;
 }
 nav ul{
