--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav ul{
 nav ul li a {
     text-decoration: none;
     font-size: 20px;
-    color: whitesmoke;
+    color: black;
     padding: 12px 24px;
     border-radius: 15px;
     transition: background-color 0.3s;
