--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header{
-    background-color: #ffcc00;
+    background-color: #b2e0b2;
     padding: 20px;
     text-align: center;
     border-bottom: 5px solid #ff6699;
